// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hMR - Rspack Platform > should work with rspack 1`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, insert as _insert$ } from "essor";
var _t$3 = _template$("<div><!><!>");
var _t$2 = _template$("<div>Bar");
var _t$ = _template$("<div>Foo");
import { createApp } from "essor";
function Foo() {
    return _t$();
}
Foo.__signature = "1lygndc";
Foo.__hmrId = "me1pwu:Foo";
function Bar() {
    return _t$2();
}
Bar.__signature = "u5b22v";
Bar.__hmrId = "me1pwu:Bar";
function App() {
    return function() {
        var _root$ = _t$3();
        var _n$ = _child$(_root$);
        var _n$2 = _next$(_n$, 1);
        _insert$(_root$, __$createHMRComponent$__(Foo, {}), _n$);
        _insert$(_root$, __$createHMRComponent$__(Bar, {}), _n$2);
        return _root$;
    }();
}
App.__signature = "uvdrlt";
App.__hmrId = "me1pwu:App";
var _app = createApp(__$createHMRComponent$__(App), "#root");
var __$registry$__ = [
    Foo,
    Bar,
    App
];
if (import.meta.webpackHot) {
    import.meta.webpackHot.dispose(function() {
        var _app_unmount;
        return _app === null || _app === void 0 ? void 0 : (_app_unmount = _app.unmount) === null || _app_unmount === void 0 ? void 0 : _app_unmount.call(_app);
    });
    __$hmrAccept$__("rspack", import.meta.webpackHot, __$registry$__);
}
"
`;

exports[`hMR - Rspack Platform > should work with rspack 2`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, insert as _insert$ } from "essor";
var _t$3 = _template$("<div><!><!>");
var _t$2 = _template$("<div>B");
var _t$ = _template$("<div>A");
import { createApp } from 'essor';
export function ComponentA() {
    return _t$();
}
ComponentA.__signature = "yeg9zu";
ComponentA.__hmrId = "ydmpkz:ComponentA";
export var ComponentB = function ComponentB() {
    return _t$2();
};
ComponentB.__signature = "1vo7hf2";
ComponentB.__hmrId = "ydmpkz:ComponentB";
export default function App() {
    return function() {
        var _root$ = _t$3();
        var _n$ = _child$(_root$);
        var _n$2 = _next$(_n$, 1);
        _insert$(_root$, __$createHMRComponent$__(ComponentA, {}), _n$);
        _insert$(_root$, __$createHMRComponent$__(ComponentB, {}), _n$2);
        return _root$;
    }();
}
App.__signature = "1q4priw";
App.__hmrId = "ydmpkz:App";
var _app = createApp(__$createHMRComponent$__(App), '#root');
var __$registry$__ = [
    ComponentA,
    ComponentB,
    App
];
if (import.meta.webpackHot) {
    import.meta.webpackHot.dispose(function() {
        var _app_unmount;
        return _app === null || _app === void 0 ? void 0 : (_app_unmount = _app.unmount) === null || _app_unmount === void 0 ? void 0 : _app_unmount.call(_app);
    });
    __$hmrAccept$__("rspack", import.meta.webpackHot, __$registry$__);
}
"
`;

exports[`hMR - Rspack Platform > should work with rspack 3`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, nthChild as _nthChild$, insert as _insert$ } from "essor";
var _t$ = _template$("<div>Hello <!>");
import { createApp } from 'essor';
function PropsComponent(props) {
    return function() {
        var _root$ = _t$();
        var _n$ = _nthChild$(_root$, 1);
        _insert$(_root$, function() {
            return props.name;
        }, _n$);
        return _root$;
    }();
}
PropsComponent.__signature = "kth069";
PropsComponent.__hmrId = "1dblsze:PropsComponent";
var _app = createApp(__$createHMRComponent$__(function() {
    return __$createHMRComponent$__(PropsComponent, {
        name: "World"
    });
}), '#root');
var __$registry$__ = [
    PropsComponent
];
if (import.meta.webpackHot) {
    import.meta.webpackHot.dispose(function() {
        var _app_unmount;
        return _app === null || _app === void 0 ? void 0 : (_app_unmount = _app.unmount) === null || _app_unmount === void 0 ? void 0 : _app_unmount.call(_app);
    });
    __$hmrAccept$__("rspack", import.meta.webpackHot, __$registry$__);
}
"
`;

exports[`hMR - Rspack Platform > should work with rspack 4`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, nthChild as _nthChild$, insert as _insert$, delegateEvents as _delegateEvents$ } from "essor";
var _t$ = _template$("<div>Count: <!>");
import { createApp, signal } from 'essor';
function SignalComponent() {
    var count = signal(0);
    return function() {
        var _root$ = _t$();
        var _n$ = _nthChild$(_root$, 1);
        _root$["_$click"] = function() {
            return count.value++;
        };
        _insert$(_root$, function() {
            return count.value;
        }, _n$);
        return _root$;
    }();
}
SignalComponent.__signature = "182rwo7";
SignalComponent.__hmrId = "1xegm1l:SignalComponent";
var _app = createApp(__$createHMRComponent$__(SignalComponent), '#root');
var __$registry$__ = [
    SignalComponent
];
_delegateEvents$([
    "click"
]);
if (import.meta.webpackHot) {
    import.meta.webpackHot.dispose(function() {
        var _app_unmount;
        return _app === null || _app === void 0 ? void 0 : (_app_unmount = _app.unmount) === null || _app_unmount === void 0 ? void 0 : _app_unmount.call(_app);
    });
    __$hmrAccept$__("rspack", import.meta.webpackHot, __$registry$__);
}
"
`;
